erDiagram
  DOCUMENTS ||--o{ DOCUMENT_VERSIONS : has
  DOCUMENT_VERSIONS ||--o{ EXTRACTIONS : produces
  DOCUMENTS ||--o{ ANNOTATIONS : collects
  ANNOTATIONS ||--o{ ANNOTATION_EVENTS : records
  TRAINING_RUNS ||--o{ MODEL_VERSIONS : generates
  TRAINING_RUNS ||--o{ METRICS : logs
  TRAINING_RUNS }|..|{ DOCUMENTS : covers
  JOBS ||--o{ TRAINING_RUNS : triggers
  JOBS ||..|| DOCUMENTS : optional_reference
